# triangulacion

./: CMakeLists.txt  package.xml
config/: camera.ini  camera.yml  ost.txt  ost.yaml  out_camera_calibration_r.ini  out_camera_calibration_r.yml  usb_cam.yaml
launch/: detector.launch
msg/: VectorAruco.msg
src/: Algoritmo_Triangulacion_Geometrica.cpp  detection.cpp  fractal_tracker.cpp  fractal_tracker.cpp.save  image_subscriber.cpp  trayectorias.cpp.save
